--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <br/><br/><br/>
     </h5>
   </div>
+  <script src="src/config/youtube.js" charset="utf-8"></script>
   <script src="src/data/exampleVideoData.js" charset="utf-8"></script>
   <script src="compiled/src/components/VideoListEntry.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
