--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </h5>
   </div>
   <script src="src/config/youtube.js" charset="utf-8"></script>
+  <script src="src/lib/searchYouTube.js"></script>
   <script src="src/data/exampleVideoData.js" charset="utf-8"></script>
   <script src="compiled/src/components/VideoListEntry.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
